infra/terraform/aws/modules/vpc/vpc.tf
# =============================================================================
# VPC
# =============================================================================

resource "aws_vpc" "vpc" {
  cidr_block           = var.cidr_block
  enable_dns_support   = var.enable_dns_support
  enable_dns_hostnames = var.enable_dns_hostnames
  tags = {
    Name = "${var.name}-vpc"
  }
}
